@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST database_cleaner-0.6.4.gem 29184 RMD160 5b2a1bf83e0a1610a247d8b1ccd94ac887eca2e8 SHA1 63ae0db58fa47dec8f236828e04e3bdb297ed5af SHA256 edb43c8fa02a278fc86e769efe864e67d956608431ab9ca8ba00c6efa25b8b30
+DIST database_cleaner-0.6.7.gem 29696 RMD160 03f6921e1ac05268640839a6c0f00994ecca1116 SHA1 7d7ac397c6315380dda3fae5353ab8d2bbfd868d SHA256 5704d3102bf65d950ead25031f4adb1050eae2196c2b57db7308c941a1e092d1
 EBUILD database_cleaner-0.6.4.ebuild 1156 RMD160 ac20957601359b3e323782bd214271b483f9914b SHA1 d85d8f453e979d97468aeda56aaf5fd4529be92b SHA256 04694e7f1340fa0ffcc4c05b49bfb17e703a77210278c8f07d24afbf7a48feb1
-MISC ChangeLog 1960 RMD160 ec8dbb49328e2394eeb562fd3ab74102208e3f1a SHA1 267842f451e1e9fc65703ced3a2d284a639fae77 SHA256 f810d5a6a2158e3f4f03d279b9988e6221c8980790adbcadbf6e23f10c811199
+EBUILD database_cleaner-0.6.7.ebuild 974 RMD160 168ebfc5b797e1897eccc40886724feb48de6527 SHA1 26c701938c273d836f88ff792744c3a3c100f2a2 SHA256 22b5d0fcb2c739ecb765dd3fe8ad6c3e0888af93ef8099957269bcb8aa4ffa26
+MISC ChangeLog 2100 RMD160 9b85a045e4739caab4b7006666faea1e36db2668 SHA1 d78c1000c4863d2bb1418adcd51a70a5156f4985 SHA256 a4feea6d0df5f1d2ce0bb6410b400163d5d7e7a9ab5ed4eb8663dad467a5bb35
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk39nywACgkQrnu0mw69JkqxjgD/SMzDGSRKjojPAJ6zMi389JrW
-VaPjAX9zIzEsC965wEcA/373ysM9ZYRyey+uMOfwcveIfkzTCJdKAmW9jzES/za9
-=J5XR
+iF4EAREIAAYFAk39oKgACgkQrnu0mw69JkqkngEAiLkN4Szlif40pCn1taHjBqHF
+HudM0SOAAZeaqrNGPNQA+waXiEnwePiFDg1qBRtjdkADya76zpG/EnjbID1iNVK6
+=mJEr
 -----END PGP SIGNATURE-----
