@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*database_cleaner-0.6.7 (19 Jun 2011)
+
+  19 Jun 2011; Hans de Graaff <graaff@gentoo.org>
+  +database_cleaner-0.6.7.ebuild:
+  Version bump.
+
   19 Jun 2011; Hans de Graaff <graaff@gentoo.org>
   -database_cleaner-0.5.2.ebuild:
   Remove old version.
